--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,11 @@
 		</dependency>
 		<dependency>
 			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper-spring-boot-starter</artifactId>
+			<version>1.2.10</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.pagehelper</groupId>
 			<artifactId>pagehelper</artifactId>
 			<version>5.1.6</version>
 		</dependency>
